<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity"
    android:background="@color/applicationBackground"
    android:gravity="center">
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:gravity="center">
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/item"
                android:textColor="@color/white"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/itemNameEditText"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:gravity="center">
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/category"
                android:textColor="@color/white"
                android:gravity="center_vertical"/>
            <Spinner
                android:id="@+id/itemCategorySpinner"
                android:backgroundTint="@color/white"
                android:layout_width="150dp"
                android:layout_height="50dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:text="@string/price"
                android:textColor="@color/white"
                android:gravity="center_vertical"/>
            <EditText
                android:id="@+id/itemPriceEditText"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:numeric="integer"
                android:backgroundTint="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:gravity="center">
            <Button
                android:id="@+id/addItemButton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/add"
                android:textColor="@color/white"
                android:background="@drawable/corner_grid_second_color"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>