<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    android:background="@color/applicationBackground">
    <LinearLayout
        android:id="@+id/orderOptionLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:padding="5dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/orderingButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ordering"
            android:textColor="@color/applicationBackground"
            android:background="@drawable/corner_grid_second_color"
            tools:ignore="ButtonStyle,NestedWeights" />
        <Button
            android:id="@+id/orderedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ordered"
            android:textColor="@color/white"
            android:background="@drawable/corner_grid_main_color"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@drawable/corner_grid_main_color">
        <ListView
            android:id="@+id/orderListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:weightSum="2">
        <TextView
            android:id="@+id/orderTableNameTextView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/table"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights" />
        <TextView
            android:id="@+id/orderEmployeeNameTextView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/employee"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:weightSum="2">
        <TextView
            android:id="@+id/quantumTextView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/table"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights" />
        <TextView
            android:id="@+id/amountTextView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/employee"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonAreaLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:weightSum="5"
        android:gravity="center">
        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/save"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginRight="2dp"
            android:background="@drawable/corner_grid_second_color"
            android:layout_height="match_parent"
            tools:ignore="ButtonStyle,NestedWeights" />
        <Button
            android:id="@+id/saveAndPrint"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/saveAndPrint"
            android:textAlignment="center"
            android:gravity="center"
            android:background="@drawable/corner_grid_second_color"
            android:layout_height="match_parent"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/payButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/pay"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="4pt"
            android:layout_marginRight="2dp"
            android:textColor="@color/applicationBackground"
            android:background="@drawable/corner_grid_second_color"
            android:layout_height="match_parent"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/editButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="4pt"
            android:layout_marginRight="2dp"
            android:textColor="@color/applicationBackground"
            android:background="@drawable/corner_grid_pay_color"
            android:layout_height="match_parent"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:orientation="horizontal"
        android:weightSum="10"
        tools:ignore="DisableBaselineAlignment">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="@drawable/corner_grid_main_color"
            tools:ignore="NestedWeights"
            android:weightSum="10"
            android:orientation="vertical">
            <GridView
                android:id="@+id/listItemGridView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8.8"
                android:verticalSpacing="3dp"
                android:horizontalSpacing="3dp"
                android:numColumns="1"/>
            <EditText
                android:id="@+id/searchItemEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.2"
                android:padding="1dp"
                android:background="@drawable/corner_grid_main_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">
            <ListView
                android:id="@+id/categoryListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>